Some fixes for the offline help. Prevent flickering of GTK+3 web view.
[DEVELOPMENT ENVIRONMENT]
* BUG: Help browser: Some fixes for the offline help.
* BUG: Help browser: Prevent flickering of GTK+3 web view.

--- a/app/src/gambas3/help/wiki/style-offline-htmlview.css
+++ b/app/src/gambas3/help/wiki/style-offline-htmlview.css
@@ -1,3 +1,7 @@
+HTML {
+  background-color: white;
+}
+
 BODY {
   overflow: auto !important;
   height: auto !important;
@@ -18,10 +22,7 @@ BODY {
 .page {
   position: static !important;
   padding: 0 !important;
-}
-
-DIV.syntax > P:last-child {
-  margin-bottom: 0.5em !important;
+  /*line-height: initial !important;*/
 }
 
 H1 {
@@ -33,4 +34,12 @@ H1 {
 
 U A {
   text-decoration: underline !important;
+}
+
+CODE {
+  display: inline !important;
+}
+
+H1,H2,H3,H4 {
+  margin-top: 0 !important;
 }
